Fix the spacing issue with the headers on the summary view.

--- a/assets/css/car-list.css
+++ b/assets/css/car-list.css
@@ -84,10 +84,15 @@ label{
     display:none;
 }
 
-h2 {
+.subject-header {
     width: 80%;
-    padding: 90px 0 15px 0;
+    padding: 50px 0 15px 0;
     margin: 0 auto;
+}
+
+.is-first{
+
+    padding-top:0px;
 }
 
 @media only screen and (max-width:750px){
